@@ -1,6 +1,8 @@
+from zope.app.component.hooks import setSite
 from zope.component import getGlobalSiteManager
 from zope.interface import implements
 
+from Acquisition import aq_base
 from Products.Five.browser import BrowserView
 from Products.Five import zcml
 
@@ -14,6 +16,7 @@ class ZCMLReload(BrowserView):
     implements(IZCMLReload)
 
     def reload(self):
+        setSite(None)
         gsm = getGlobalSiteManager()
         gsm.__init__(gsm.__name__)
 
@@ -26,4 +29,7 @@ class ZCMLReload(BrowserView):
         zcml._initialized = False
         zcml._context._seen_files.clear()
         zcml.load_site()
+
+        # Minimize all caches
+        aq_base(self.context)._p_jar.db().cacheMinimize()
         return 'Global ZCML reloaded.'
